--- a/projects/foa/udutha-ui/package.json
+++ b/projects/foa/udutha-ui/package.json
@@ -1,11 +1,38 @@
 {
-  "name": "@foa/udutha-ui",
-  "version": "1.0.0",
+  "name": "@fourthofaugust/udutha-ui",
+  "version": "1.0.7",
+  "description": "a set of angular components built using vanilla-framework css by canonical",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/fourthofaugust/udutha-ui.git"
+  },
+  "bugs": {
+    "url": "https://github.com/fourthofaugust/udutha-ui/issues"
+  },
+  "homepage": "https://github.com/fourthofaugust/udutha-ui",
+  "contributors": [
+    "Phani Mahesh",
+    "Aditya Peesapati"
+  ],
+  "maintainers": [
+    "Phani Mahesh",
+    "Aditya Peesapati"
+  ],
+  "keywords": [
+    "angular components",
+    "vanilla framework",
+    "ux",
+    "fourthofaugust",
+    "udutha",
+    "udutha ui"
+  ],
+  "license": "MIT",
   "peerDependencies": {
     "@angular/common": "^9.1.9",
     "@angular/core": "^9.1.9"
   },
   "dependencies": {
+    "vanilla-framework": "^2.12.0",
     "tslib": "^1.10.0"
   }
 }
